Modified the creation of the Ingress to allow Default Cert on OCP Route creation